测试专利模块

--- a/_patents/2017-wang-3.md
+++ b/_patents/2017-wang-3.md
@@ -1,8 +1,8 @@
 ---
-title: "一种列式存储下多时间序列的连接查询方法及系统"
-collection: publications
+title: "一种时序数据列式存储、查询方法及系统"
+collection: patents
 category: authorized
-permalink: /patents/2017-wang-1
+permalink: /patents/2017-wang-3
 excerpt: ''
 date: 2017-11-1
 venue: ''
