--- a/_patents/2020-wang-1.md
+++ b/_patents/2020-wang-1.md
@@ -2,7 +2,7 @@
 title: "一种基于数据特征权重分析的时序数据水印比较算法"
 collection: patents
 category: public
-permalink: /publication/2020-wang-1
+permalink: /patents/2020-wang-1
 excerpt: ''
 date: 2020-9-4
 venue: ''
