--- a/_patents/2017-wang-2.md
+++ b/_patents/2017-wang-2.md
@@ -1,8 +1,8 @@
 ---
-title: "一种列式存储下多时间序列的连接查询方法及系统"
-collection: publications
+title: "一种自适应编码长度的时序数据存储的方法和装置"
+collection: teaching
 category: authorized
-permalink: /patents/2017-wang-1
+permalink: /patents/2017-wang-2
 excerpt: ''
 date: 2017-11-1
 venue: ''
