--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,9 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "一种列式存储下多时间序列的连接查询方法及系统"
 collection: talks
 type: "Talk"
 permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
 date: 2012-03-01
-location: "San Francisco, CA, USA"
 ---
 
 This is a description of your talk, which is a markdown file that can be all markdown-ified like any other post. Yay markdown!
