更换专利输出

--- a/_talks/201711319331.1.md
+++ b/_talks/201711319331.1.md
@@ -1,6 +1,7 @@
 ---
 title: "一种自适应编码长度的时序数据存储的方法和装置"
 collection: publications
+category: authorized
 permalink: /talks/201711319331.1
 excerpt: ''
 date: 2017-12-12
