增加新专著

--- a/_teaching/工业大数据技术与应用实战.md
+++ b/_teaching/工业大数据技术与应用实战.md
@@ -1,9 +1,11 @@
 ---
-title: "Teaching experience 1"
+title: "工业大数据技术与应用实战(2017)"
 collection: teaching
 permalink: /teaching/工业大数据技术与应用实战
 venue: "出版号：9787121326561"
 date: 2017-09-01
 ---
 
+简介
+======
 《中国制造2025》规划明确提出，工业大数据是我国制造业转型升级的重要战略资源。为此，在工业互联网产业联盟的指导下，总体组下辖的工业大数据特设组主持编写了本书。全书共7章；第1章重点阐述工业大数据的概念、价值和历史由来；第2章重点介绍工业大数据的典型应用场景；第3、4章分别从业务和技术两个角度探讨了工业大数据的实施路径和系统架构；第5、6章介绍了工业大数据管理与分析的关键技术；第7章介绍了8个工业大数据典型应用案例。最后，结语部分展望了我国工业大数据的未来愿景。
