--- a/_talks/2014-03-01-talk-3.md
+++ b/_talks/2014-03-01-talk-3.md
@@ -1,14 +1,12 @@
 ---
 title: "一种自适应编码长度的时序数据存储的方法和装置"
-collection: publications
-category: authorized
-permalink: /talks/201711319331.1
-excerpt: ''
+collection: talks
+permalink: /talks/2014-03-01-talk-3
 date: 2017-12-12
 ---
 
-发明专利
+已授权发明专利
 
-书本简介
+专利简介
 ======
 本发明提供一种自适应编码长度的时序数据存储的方法和装置,包括按时间戳先后顺序获取时间戳对应的数据值,将预存储前n个数据值所需的存储空间值与预存储预设编码规则的规则信息和前n个数据值对应的编码数据所需的存储空间值的比值作为获取第n个数据值的时刻对应的存储收益,若获取第n个数据值的时刻对应的存储收益比获取第n-1个数据值的时刻对应的存储收益小,则存储预设编码规则的规则信息和前n-1个数据值对应的编码数据；从而引入了存储收益来判断时序数据序列中是否存在异常数据,在确定存在异常数据时,对异常数据之前所有数据按对应的编码数据存储,避免了异常数据在编码过程中造成的不良影响,保证了最佳的节省存储空间的效果。
