--- a/_talks/一种自适应编码长度的时序数据存储的方法和装置.md
+++ b/_talks/一种自适应编码长度的时序数据存储的方法和装置.md
@@ -1,7 +1,7 @@
 ---
 title: "一种自适应编码长度的时序数据存储的方法和装置"
 collection: talks
-permalink: /talks/2014-03-01-talk-3
+permalink: /talks/一种自适应编码长度的时序数据存储的方法和装置
 date: 2017-12-12
 ---
 
