--- a/_talks/一种自适应编码长度的时序数据存储的方法和装置.md
+++ b/_talks/一种自适应编码长度的时序数据存储的方法和装置.md
@@ -7,6 +7,6 @@ date: 2017-12-12
 
 已授权发明专利
 
-专利简介
+专利摘要
 ======
 本发明提供一种自适应编码长度的时序数据存储的方法和装置,包括按时间戳先后顺序获取时间戳对应的数据值,将预存储前n个数据值所需的存储空间值与预存储预设编码规则的规则信息和前n个数据值对应的编码数据所需的存储空间值的比值作为获取第n个数据值的时刻对应的存储收益,若获取第n个数据值的时刻对应的存储收益比获取第n-1个数据值的时刻对应的存储收益小,则存储预设编码规则的规则信息和前n-1个数据值对应的编码数据；从而引入了存储收益来判断时序数据序列中是否存在异常数据,在确定存在异常数据时,对异常数据之前所有数据按对应的编码数据存储,避免了异常数据在编码过程中造成的不良影响,保证了最佳的节省存储空间的效果。
