--- a/_publications/2024-Chao_Y-1.md
+++ b/_publications/2024-Chao_Y-1.md
@@ -5,6 +5,7 @@ category: bigdata
 permalink: /publication/2024-Chao_Y-1
 date: 2024-5-21
 venue: 'TII'
+paperurl: 'http://wc81.github.io/files/Self-Tuning Transfer Dynamic Convolution Autoencoder for Quality Prediction of Multimode Processes With Shifts.pdf'
 ---
 
 引用格式：Yang C, Liu Q, Wang C, et al. Self-Tuning Transfer Dynamic Convolution Autoencoder for Quality Prediction of Multimode Processes With Shifts[J]. IEEE Transactions on Industrial Informatics, 2024.
