修改论文格式

--- a/_publications/2024-Chao_Y-1.md
+++ b/_publications/2024-Chao_Y-1.md
@@ -8,7 +8,7 @@ venue: 'TII'
 paperurl: 'http://wc81.github.io/files/Self-Tuning Transfer Dynamic Convolution Autoencoder for Quality Prediction of Multimode Processes With Shifts.pdf'
 ---
 
-引用格式：Yang C, Liu Q, Wang C, et al. Self-Tuning Transfer Dynamic Convolution Autoencoder for Quality Prediction of Multimode Processes With Shifts[J]. IEEE Transactions on Industrial Informatics, 2024.
+[论文地址](https://ieeexplore.ieee.org/abstract/document/10543184)
 
 论文摘要
 ======
