--- a/_teaching/工业大数据技术与应用实战.md
+++ b/_teaching/工业大数据技术与应用实战.md
@@ -1,5 +1,5 @@
 ---
-title: "工业大数据技术与应用实践(2017)"
+title: "4.工业大数据技术与应用实践(2017)"
 collection: teaching
 type: "电子工业出版社"
 permalink: /teaching/工业大数据技术与应用实战
