--- a/_teaching/面向高端制造领域的大数据管理系统.md
+++ b/_teaching/面向高端制造领域的大数据管理系统.md
@@ -1,5 +1,5 @@
 ---
-title: "面向高端制造领域的大数据管理系统"
+title: "1.面向高端制造领域的大数据管理系统"
 collection: teaching
 type: "清华大学出版社"
 permalink: /teaching/面向高端制造领域的大数据管理系统
