修改默认语言

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,7 +1,14 @@
 ---
 title: "Page Not Found"
 sitemap: false
+lang: zh
 permalink: /404.html
 ---
 
+<div class="lang-zh">
+抱歉，你所访问的页面不存在。
+</div>
+
+<div class="lang-en" style="display:none;">
 Sorry, but the page you were trying to view does not exist.
+</div>
