--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,14 +1,16 @@
 ---
-title: "Page Not Found"
+title: ""
 sitemap: false
 lang: zh
 permalink: /404.html
 ---
 
 <div class="lang-zh">
+<h1>页面不存在</h1>
 抱歉，你所访问的页面不存在。
 </div>
 
 <div class="lang-en" style="display:none;">
+<h1>Page Not Found</h1>
 Sorry, but the page you were trying to view does not exist.
 </div>
